<resources>
    <string name="app_name">汽车超人</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login_in">登录</string>
    <string name="action_sign_in">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">必须为email格式</string>
    <string name="error_invalid_password">密码须为6位以上</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_first">firstActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="limit_time">限行时间：</string>
    <string name="limit_place">限行区域：</string>
    <string name="limit_info">详细信息：</string>

    <string name="User_name">请登录</string>
    <string name="Regist_button">没有用户名？点这里</string>

    <string name="about_text">版本号v1.0</string>
    <string name="about_text2">Copyright(c) 2017 Hbz. All rights reserved.</string>

</resources>
